# 100DaysOfCode

./: .pre-commit-config.yaml  poetry.toml  pyproject.toml  requirements.txt
100daysofcode/: 002_tip_calculator.py  003_treasure_island.py  004_rock_paper_scissors.py  005_password_generator.py  007_hangman.py  008_caesar_cipher.py  009_blind_auction.py  010_calculator.py  011_blackjack.py  012_guess_the_number.py  014_higher_lower_game.py  015_coffee_machine.py  019_turtle.py  027_miles_to_km_converter.py  033_iss_notifier.py  033_sunrise_sunset.py
100daysofcode/016_oop_coffee_machine/: __init__.py  main.py
100daysofcode/017_quiz_game/: __init__.py  data.py  question_model.py  quiz_brain.py
100daysofcode/018_turtle/: __init__.py  main.py
100daysofcode/020_021_024_snake_game/: food.py  main.py  scoreboard.py  snake.py
100daysofcode/020_021_snake_game/: food.py  main.py  scoreboard.py  snake.py
100daysofcode/022_pong_game/: ball.py  main.py  paddle.py  scoreboard.py
100daysofcode/023_turtle_crossing/: car_manager.py  main.py  player.py  scoreboard.py
100daysofcode/024_mail_merge/: main.py
100daysofcode/025_states_game/: 30_states.csv  main.py
100daysofcode/026_nato_alphabet/: main.py
100daysofcode/028_pomodoro/: main.py
100daysofcode/029_030_password_manager/: main.py
100daysofcode/029_password_manager/: main.py
100daysofcode/031_flash_card/: main.py
100daysofcode/032_birthday_wisher/: birthdays.csv  main.py
100daysofcode/033_kanye_quotes/: main.py
100daysofcode/034_quizzler_app/: data.py  main.py  quiz_brain.py  (+1 more)
scripts/: popular words.py
(+4 files in other folders)
