[tool.poetry]
name = "100daysofcode"
version = "0.1.0"
description = ""
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@eleks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.5"
heroes = "^1.0.2"
"colorgram.py" = "^1.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
